<resources>
    <string name="app_name">合作伙伴</string>
    <string name="default_progress_tip">正在加载...</string>
    <string name="tab_home">首页</string>
    <string name="tab_activity">活动</string>
    <string name="tab_product">产品</string>
    <string name="tab_me">个人</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="please_input_telephone">请输入手机号</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="register_description">手机号码即为登录账号，我们将发送验证码短信到该号码</string>
    <string name="next_step">下一步</string>
    <string name="get_auth_cd">%1$dS</string>
    <string name="reget_auth_code">重新获取</string>
    <string name="please_reinput_password">请再次输入密码</string>
    <string name="please_verify_password">请确保两次密码的统一性</string>
    <string name="generalize_code">推广编码</string>
    <string name="please_input_generalize_code">请输入推广人的邀请码</string>
    <string name="generalize_code_dispensable">若没有推广人，可不填写</string>
    <string name="complete">完成</string>
    <string name="please_input_password_length">密码长度应至少6位</string>
    <string name="partner_check_network">请检查网络</string>
    <string name="partner_request_network_error">网络不给力,稍后重试！</string>
    <string name="partner_confirm">确定</string>
    <string name="partner_cancel">取消</string>
    <string name="partner_delete">删除</string>
    <string name="partner_exit_app">再按一次退出程序</string>
    <string name="partner_no_data">暂无数据</string>
    <string name="partner_request_error">网络不给力,稍后重试！</string>
    <string name="partner_set_success">设置成功</string>
    <string name="partner_set_failure">设置失败</string>
    <string name="partner_submitting">正在提交&#8230;</string>
    <string name="partner_version">版本v%1$s</string>
    <string name="partner_expect">敬请期待</string>
    <string name="partner_url_h5">http://m.game.13322.com</string>
    <string name="partner_statistics">统计</string>
    <string name="partner_skip">跳过</string>
    <string name="partner_data_exception">数据异常</string>
    <string name="partner_wifi_network_available">当前WiFi连接可用</string>
    <string name="partner_mobile_network_available">当前移动网络连接可用</string>
    <string name="partner_network_not_available">当前网络不可用</string>
    <string name="login_regex_phone">请输入正确的手机号</string>
    <string name="partner_account_reset">忘记密码</string>
    <string name="partner_account_reset_register_phone">请输入您注册时的手机号</string>
    <string name="partner_account_reset_sms_code">请输入短信验证码</string>
    <string name="partner_account_reset_new_pwd">请输入新密码</string>
    <string name="partner_account_reset_error">重置密码异常</string>
    <string name="partner_account_reset_empty_phone">手机号码未注册</string>
    <string name="partner_account_reset_code_err">验证码或者手机号码不正确</string>
    <string name="register_get_code_fail">验证码获取失败</string>
    <string name="register_get_code_success">验证码已发送</string>
    <string name="register_phone_input_error">您输入的手机号码不正确</string>
    <string name="register_auth_code_confirm_error">验证码不正确</string>
    <string name="register_auth_code_not_empty">验证码不能为空</string>
    <string name="register_partner_no_err">邀请码错误</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_psw_length_error">密码格式必须是6-20位数字字母组合</string>
    <string name="register_confirm_psw_error">两次输入的密码不相符</string>
    <string name="reset_pwd_get_code">验证码已发送</string>
    <string name="salary_modify_model">佣金模式修改</string>
    <string name="salary_modify_model_select">佣金模式选择</string>
    <string name="salary_ll_game">乐盈电竞</string>
    <string name="salary_hy_tv">海妖直播</string>
    <string name="salary_game_platform">游戏平台</string>
    <string name="salary_select_return_model">请选择返佣方式</string>
    <string name="activity_official">官方活动</string>
    <string name="activity_teamwork">合作活动</string>
    <string name="activity_in_progress">进行中</string>
    <string name="activity_finished">已结束</string>
    <string name="activity_details">活动详情</string>
    <string name="activity_details_author">作者：%1$s</string>
    <string name="activity_details_date">时间：%1$s</string>
    <string name="partner_home_today_money">今日获得金额(元)</string>
    <string name="partner_home_today_money_num">0.00</string>
    <string name="partner_home_proxy_people">代理人数</string>
    <string name="partner_home_proxy_product">代理产品</string>
    <string name="partner_home_proxy_pay_count">付费次数</string>
    <string name="partner_home_proxy_num">0</string>
    <string name="partner_home_item_my_proxy">我的代理</string>
    <string name="partner_home_item_my_proxy_en">Agent</string>
    <string name="partner_home_item_my_assets">我的资产</string>
    <string name="partner_home_item_my_assets_en">Assets</string>
    <string name="partner_home_item_data">数据统计</string>
    <string name="partner_home_item_data_en">Data</string>
    <string name="partner_home_item_extension">产品推广</string>
    <string name="partner_home_item_extension_en">Extension</string>
    <string name="partner_home_item_proxy_rule">代理规则</string>
    <string name="partner_home_item_proxy_rule_en">Rule</string>
    <string name="partner_home_item_rebate">模式修改</string>
    <string name="partner_home_item_rebate_en">Rebate</string>
    <string name="partner_product_manage">产品管理</string>
    <string name="partner_product_recommend">推荐</string>
    <string name="partner_product_action">动作</string>
    <string name="partner_product_recreation">娱乐</string>
    <string name="partner_product_adventure">冒险</string>
    <string name="partner_product_shoot">射击</string>
    <string name="partner_product_strategy">策略</string>
    <string name="partner_product_role">角色</string>
    <string name="partner_product_chess">棋牌</string>
    <string name="partner_product_hot_game">热门游戏</string>
    <string name="partner_product_highest_profit">最高盈利产品</string>
    <string name="partner_product_max_proxy">最多人代理</string>
    <string name="partner_product_newest_game">最新游戏</string>
    <string name="partner_product_android_game">安卓</string>
    <string name="partner_product_proxy_num">%1$d人代理</string>
    <string name="partner_product_proxy_person_num">%1$d人在代理</string>
    <string name="partner_product_generalize">推广</string>
    <string name="partner_product_proxy_ratio">代理比例：15%-70%</string>
    <string name="partner_product_divide_ratio">分成比例：15%-70%</string>
    <string name="partner_product_proxy_ranking_list">代理排行榜</string>
    <string name="partner_product_proxy_account">代理账号</string>
    <string name="partner_product_proxy_amount">金额</string>
    <string name="partner_product_proxy_ranking">排名</string>
    <string name="partner_product_proxy_game_cur_ranking">游戏当前排名是第%1$d</string>
    <string name="partner_product_proxy_game_no_ranking">您在此游戏暂无排名</string>
    <string name="partner_product_search_hint">请输入你要搜索的游戏</string>
    <string name="partner_product_search_clear">清空</string>
    <string name="partner_product_search_empty">没找到相关游戏</string>
    <string name="partner_product_record_search_empty">暂无历史搜索记录</string>
    <string name="partner_product_history_search">历史搜索</string>
    <string name="partner_product_private_proxy">独代产品</string>
    <string name="partner_product_private_proxy_dj">乐盈电竞</string>
    <string name="partner_product_private_proxy_sports">体育竞猜</string>
    <string name="partner_product_private_proxy_dz">撩妹德州</string>
    <string name="partner_product_hot">热门产品</string>
    <string name="partner_home_agent">我的代理</string>
    <string name="partner_personal_account_setting">账户设置</string>
    <string name="partner_personal_notice">通知</string>
    <string name="partner_personal_cash_account">提现账户</string>
    <string name="partner_personal_about_us">关于我们</string>
    <string name="partner_personal_promotion">个人推广</string>
    <string name="partner_personal_invite_code">邀请码</string>
    <string name="partner_personal_your_invite_code">您的邀请码是：</string>
    <string name="partner_personal_modify_salary_model">修改佣金计算方式</string>
    <string name="partner_personal_account_login">登录账号</string>
    <string name="partner_personal_account_exit">退出登录</string>
    <string name="partner_personal_account_exit_success">退出成功</string>
    <string name="partner_personal_account_exit_fail">退出失败</string>
    <string name="partner_personal_account_pay_psw">支付密码</string>
    <string name="partner_personal_account_modify_psw">修改密码</string>
    <string name="partner_personal_account_input_old_psw">请输入原始密码</string>
    <string name="partner_personal_account_input_new_psw">请输入新密码</string>
    <string name="partner_personal_account_modify_psw_success">修改密码成功</string>
    <string name="partner_personal_account_modify_psw_fail">修改密码失败</string>
    <string name="partner_personal_account_error_old_psw">原始密码错误</string>
    <string name="partner_personal_account_input_confirm_psw">请输入确认密码</string>
    <string name="partner_personal_account_set_pay_psw">设置支付密码</string>
    <string name="partner_personal_account_modify_pay_psw">修改支付密码</string>
    <string name="partner_personal_account_modify_pay_psw_success">修改支付密码成功</string>
    <string name="partner_personal_account_modify_pay_psw_fail">修改支付密码失败</string>
    <string name="partner_personal_account_new_psw">新密码</string>
    <string name="partner_personal_account_new_psw_hint">8&#8211;20位数字和字母组合</string>
    <string name="partner_personal_account_input_psw_hint">请输入8&#8211;20位数字和字母组合</string>
    <string name="partner_personal_account_psw_length_error">密码格式必须是8-20位数字字母组合</string>
    <string name="partner_personal_account_confirm_psw">确认密码</string>
    <string name="partner_personal_account_confirm_modify">确认修改</string>
    <string name="partner_personal_account_confirm_set">确认设置</string>
    <string name="partner_personal_account_add_card">添加银行卡</string>
    <string name="partner_personal_account_deposit_card">储蓄卡</string>
    <string name="partner_personal_account_bank">银行：</string>
    <string name="partner_personal_account_select_bank">选择银行</string>
    <string name="partner_personal_account_bank_card">银行卡号：</string>
    <string name="partner_personal_account_name">姓名：</string>
    <string name="partner_personal_account_input_card">填入银行卡号</string>
    <string name="partner_personal_account_input_card_num">银行卡号格式不正确</string>
    <string name="partner_personal_account_phone">手机号码：</string>
    <string name="partner_personal_account_input_phone">请输入注册时的手机号</string>
    <string name="partner_personal_account_auth_code">验证码：</string>
    <string name="partner_personal_account_input_auth_code">请输入短信验证码</string>
    <string name="partner_personal_account_for_safe">为了您的安全</string>
    <string name="partner_personal_account_auth_info">提现前需要对您的账户进行身份验证</string>
    <string name="partner_personal_account_auth_now">现在认证</string>
    <string name="partner_personal_account_auth_later">稍后认证</string>
    <string name="partner_personal_info">个人资料</string>
    <string name="partner_personal_auth_china_id_card">中国大陆身份证</string>
    <string name="partner_personal_auth_id_type">证件类型：</string>
    <string name="partner_personal_auth_name">真实姓名：</string>
    <string name="partner_personal_auth_id_name">您证件上的名字</string>
    <string name="partner_personal_auth_id_num">证件号码：</string>
    <string name="partner_personal_auth_input_id_num">请输入15位或18位身份证号码</string>
    <string name="partner_personal_auth_submit">提交验证</string>
    <string name="home_agent_extension_play_game">玩一下游戏</string>
    <string name="home_agent_extension_play_num">2333人玩过</string>
    <string name="home_agent_extension_in">进入</string>
    <string name="partner_share_sina">分享到新浪微博</string>
    <string name="partner_share_qq_zone">分享到QQ空间</string>
</resources>