<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <EditText
        android:id="@+id/inputTelNumEdit"
        style="@style/Widget.Partner.Register_EditText"
        android:layout_marginTop="24dp"
        android:inputType="phone"
        android:maxLength="11"
        android:hint="@string/please_input_telephone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/inputAuthCodeEdit"
            style="@style/Widget.Partner.Register_EditText"
            android:hint="@string/please_input_auth_code" />

        <TextView
            android:id="@+id/getAuthCodeText"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_get_auth_code_selector"
            android:gravity="center"
            android:text="@string/get_auth_code"
            android:textColor="@color/color_fff" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/register_description"
        android:textColor="@color/color_A8A8A8"
        android:textSize="@dimen/text_size_11" />

    <Button
        android:id="@+id/nextStepBtn"
        style="@style/Widget.Partner.Login_Btn"
        android:layout_marginTop="24dp"
        android:text="@string/next_step" />
</LinearLayout>