<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/widget_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:text="@string/partner_personal_info"
        android:textColor="@color/color_A8A8A8"
        android:textSize="@dimen/text_size_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fff"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner_personal_auth_id_type"
            android:textColor="@color/color_1B1D2A"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:id="@+id/select_bank_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/partner_personal_auth_china_id_card"
            android:textColor="@color/color_7b69ff"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/color_fff"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner_personal_auth_name"
            android:textColor="@color/color_1B1D2A"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/partner_personal_auth_id_name"
            android:textColor="@color/color_1B1D2A"
            android:textColorHint="@color/color_A8A8A8"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

    <include layout="@layout/widget_divide"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fff"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner_personal_auth_id_num"
            android:textColor="@color/color_1B1D2A"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/id_num_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/partner_personal_auth_input_id_num"
            android:maxLength="18"
            android:textColor="@color/color_1B1D2A"
            android:textColorHint="@color/color_A8A8A8"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        style="@style/Widget.Partner.Login_Btn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="23dp"
        android:text="@string/partner_personal_auth_submit"/>
</LinearLayout>