<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/root"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="15dp"
              android:paddingRight="15dp">

    <EditText
            android:id="@+id/reset_pwd_phone"
            style="@style/Widget.Partner.Register_EditText"
            android:layout_marginTop="24dp"
            android:inputType="phone"
            android:hint="@string/partner_account_reset_register_phone"/>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

        <EditText
                android:id="@+id/reset_pwd_code"
                style="@style/Widget.Partner.Register_EditText"
                android:inputType="number"
                android:hint="@string/partner_account_reset_sms_code"/>

        <TextView
                android:id="@+id/reset_pwd_get_code"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_get_auth_code_selector"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/get_auth_code"
                android:textColor="@color/color_fff"/>
    </RelativeLayout>

    <EditText
            android:id="@+id/reset_pwd_new_pwd"
            style="@style/Widget.Partner.Register_EditText"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:hint="@string/partner_account_reset_new_pwd"/>

    <Button
            android:id="@+id/reset_pwd_confirm"
            style="@style/Widget.Partner.Login_Btn"
            android:layout_marginTop="24dp"
            android:text="@string/partner_confirm"/>
</LinearLayout>