<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_fff"
              android:orientation="vertical">

    <include layout="@layout/widget_toolbar"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/inputTelNumEdit"
            style="@style/Widget.Partner.Register_EditText"
            android:hint="@string/partner_account_reset_register_phone"
            android:inputType="phone"
            android:maxLength="11"/>

        <TextView
            android:id="@+id/getAuthCodeText"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_get_auth_code_selector"
            android:gravity="center"
            android:text="@string/get_auth_code"
            android:textColor="@color/color_fff"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/inputAuthCodeEdit"
        style="@style/Widget.Partner.Register_EditText"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:hint="@string/partner_account_reset_sms_code"
        android:maxLength="6"/>

    <EditText
        android:id="@+id/inputPswEdit"
        style="@style/Widget.Partner.Register_EditText"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:hint="@string/partner_personal_account_input_psw_hint"
        android:inputType="textPassword"
        android:maxLength="20"/>

    <Button
        android:id="@+id/confirm_modify_Btn"
        style="@style/Widget.Partner.Login_Btn"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/partner_personal_account_confirm_modify"/>
</LinearLayout>