<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
>

    <LinearLayout android:layout_width="match_parent"
                  android:background="@drawable/bg_white_ten_round"
                  android:gravity="center_horizontal"
                  android:orientation="vertical"
                  android:layout_marginLeft="40dp"
                  android:layout_marginRight="40dp"
                  android:paddingLeft="40dp"
                  android:paddingRight="40dp"
                  android:layout_height="match_parent"
    >


        <Button
                android:id="@+id/share_sina"
                style="@style/Widget.Partner.Share_Btn"
                android:layout_marginTop="30dp"
                android:text="@string/partner_share_sina"/>

        <Button
                android:id="@+id/share_qq"
                style="@style/Widget.Partner.Share_Btn"
                android:layout_marginTop="20dp"
                android:text="@string/partner_share_qq_zone"/>

        <Button
                android:id="@+id/cancel"
                style="@style/Widget.Partner.Share_Btn"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/partner_cancel"/>
    </LinearLayout>
</LinearLayout>